--- a/app/app.html
+++ b/app/app.html
@@ -29,6 +29,16 @@
       <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i> Search</button>
       <button type="button" class="btn btn-danger" id="reset-coexpression" >Clear</button>
     </div>
+
+    <div id="progress_region" class="hidden">
+        <h4>Searching...</h4>
+        <div class="progress progress-striped active">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                <span class="sr-only">Loading Data</span>
+            </div>
+        </div>
+     </div>
+     
   </form>
 
   <!-- Navigation tabs -->
