--- a/app/app.html
+++ b/app/app.html
@@ -38,7 +38,7 @@
             </div>
         </div>
      </div>
-     
+
   </form>
 
   <!-- Navigation tabs -->
@@ -54,7 +54,7 @@
      <!-- Correlation Data tab -->
     <li role="presentation">
       <a href="#correlationTab" aria-controls="correlation" role="tab" data-toggle="tab">
-        Coexpression Data
+        Coexpressed Genes
       </a>
     </li>
 
@@ -66,9 +66,84 @@
     <!-- About tab -->
     <div role="tabpanel" class="tab-pane fade in active" id="aboutTab">
 
-    	<h4>This app displays table gene coexpression data, obtained from Atted-II.</h4>
-
+      <a href = "http://atted.jp" target="_blank"><img src="http://atted.jp/images/main.jpg" alt="ATTED-II Logo"></a>
       <a href="http://atted.jp/" target="_blank"><h3>ATTED-II Website</h3></a>
+      	<h4>This application displays a list of coexpressed genes for a gene of interest in a tabular format.
+           There is a table in the “Coexpressed Genes” tab, and upon entering a gene identifier the table
+           is populated with a list of coexpressed genes. Each row in a table represents an edge of the coexpressed gene.
+           The edge of connected gene is annotated with a direction of the edge, and a quantitative score.
+          The score can be is a pre-computed <strong>Pearson Correlation Coeffificent</strong> (COR), or <strong>Mutual Rank</strong> (MR).</h4>
+
+      <blockquote>
+        <p>
+          <a href="http://atted.jp/" target="_blank">ATTED-II</a> is a comprehensive database resource of coexpressed gene sets in Arabidopsis
+          that provides coregulated gene relationships inferred from microarray data and cis elements.
+          It includes lists and networks of coexpressed genes, and visual representation of expression patterns.
+          The database can be used for a wide variety of experimental designs,
+          including targeting of genes for functional identification or for regulatory investigation.
+        </p>
+        <footer>The ATTED-II Coexpression Database</footer>
+      </blockquote>
+
+      <h4><a href="http://atted.jp/top_publication.shtml">ATTED official list of publications:</a></h4>
+        <blockquote>
+          <ul id="paper-credit">
+            <li>
+              <span class="author">Obayashi T, Okamura Y, Ito S, Tadaka S, Aoki Y, Shirota M, Kinoshita K.</span>
+              <span class="year">(2014)</span>
+              <span class="title"><strong>ATTED-II in 2014: Evaluation of Gene Coexpression in Agriculturally Important Plants.</strong></span>
+              <span class="journal">Plant Cell Physiology,</span>
+              <span class="pages">55, e6.</span>
+              <a href="http://www.ncbi.nlm.nih.gov/pubmed/24334350" target="_blank">(PubMed)</a>
+            </li>
+            <li>
+              <span class="author">Obayashi T, Nishida K, Kasahara K, Kinoshita K.</span>
+              <span class="year">(2011)</span>
+              <span class="title"><strong>ATTED-II updates: condition-specific gene coexpression to extend coexpression analyses and applications to a broad range of flowering plants.</strong></span>
+              <span class="journal">Plant Cell Physiology,</span>
+              <span class="pages">52, 213-9</span>
+              <a href="http://www.ncbi.nlm.nih.gov/pubmed/21217125" target="_blank">(PubMed)</a>
+            </li>
+            <li>
+              <span class="author">Obayashi T, Hayashi S, Saeki M, Ohta H, Kinoshita K.</span>
+              <span class="year">(2009)</span>
+              <span class="title"><strong>ATTED-II provides coexpressed gene networks for Arabidopsis.</strong></span>
+              <span class="journal">Nucleic Acids Res.,</span>
+              <span class="pages">37, D987-91.</span>
+              <a href="http://www.ncbi.nlm.nih.gov/pubmed/18953027" target="_blank">(PubMed)</a>
+            </li>
+            <li>
+              <span class="author">Obayashi T, Kinoshita K, Nakai K, Shibaoka M, Hayashi S, Saeki M, Shibata D, Saito K, Ohta H.</span>
+              <span class="year">(2007)</span>
+              <span class="title"><strong>ATTED-II: a database of co-expressed genes and cis elements for identifying co-regulated gene groups in Arabidopsis.</strong></span>
+              <span class="journal">Nucleic Acids Res.,</span>
+              <span class="pages">35, D863-9.</span>
+              <a href="http://www.ncbi.nlm.nih.gov/pubmed/17130150" target="_blank">(PubMed)</a>
+            </li>
+          </ul>
+        </blockquote>
+
+         <h3>Instructions:</h3>
+         <h4>
+           To get started, enter a gene identifier in the input field labeled <strong>“Locus”</strong>.
+           An example of a valid locus ID provided in the search box. Once the search button is clicked the list of coexpressed genes.
+         </h4>
+         <br>
+          <h4>
+            Additional Features:
+          </h4>
+          <ul>
+              <li>
+                The input field labeled "Relationship Type" allows to choose the type of prediction score of the coexpressed genes.
+                 You may choose between <strong>Pearson Correlation Coeffificent</strong> or <strong>Mutual Rank</strong>.
+              </li>
+              <li>
+                The list of coexpressed genes can be filtered by the degree of coexpression. The cut-off score for the degree of coexpression is entered in the field labeled <strong>"Treshold" </strong>.
+              </li>
+              <li>
+                In addition, the list of coexpressed genes can be searched by typing a keyword in the <strong>"Search"</strong> field right above the table of coexpressed genes.
+              </li>
+          </ul>
 
     </div> <!-- Close #aboutTab -->
 
