--- a/app/app.html
+++ b/app/app.html
@@ -158,4 +158,13 @@
 
   </div> <!-- Close .tab-content -->
 
+<br>
+  <div class="row">
+          <div class="col-sm-12">
+              <p>
+                  Data &amp; web services provided by
+                  <a href="http://atted.jp" target="_blank">ATTED-II (version 2.1)<i class="fa fa-external-link"></i></a>.
+              </p>
+          </div>
+      </div>
 </div>
