--- a/app/app.html
+++ b/app/app.html
@@ -135,7 +135,7 @@
           <ul>
               <li>
                 The input field labeled "Relationship Type" allows to choose the type of prediction score of the coexpressed genes.
-                 You may choose between <strong>Pearson Correlation Coeffificent</strong> or <strong>Mutual Rank</strong>.
+                 You may choose between <strong>Pearson Correlation Coefficient</strong> or <strong>Mutual Rank</strong>.
               </li>
               <li>
                 The list of coexpressed genes can be filtered by the degree of coexpression. The cut-off score for the degree of coexpression is entered in the field labeled <strong>"Treshold" </strong>.
