--- a/app/app.html
+++ b/app/app.html
@@ -68,18 +68,20 @@
 
       <a href = "http://atted.jp" target="_blank"><img src="http://atted.jp/images/main.jpg" alt="ATTED-II Logo"></a>
       <a href="http://atted.jp/" target="_blank"><h3>ATTED-II Website</h3></a>
-      	<h4>This application displays a list of coexpressed genes for a gene of interest in a tabular format.
-           There is a table in the “Coexpressed Genes” tab, and upon entering a gene identifier the table
-           is populated with a list of coexpressed genes. Each row in a table represents an edge of the coexpressed gene.
-           The edge of connected gene is annotated with a direction of the edge, and a quantitative score.
-          The score can be is a pre-computed <strong>Pearson Correlation Coeffificent</strong> (COR), or <strong>Mutual Rank</strong> (MR).</h4>
+      	<h4>This application displays coexpressed genes for a gene of interest.
+          The display is in tabular format.
+          The table in the “Coexpressed Genes” tab gets populated with coexpressed genes for the given gene identifier,
+          one row per coexpressed gene.
+          Each row includes a quantitative score, which can be the pre-computed <strong>Pearson Correlation coefficient (COR)</strong>,
+          or <strong>Mutual Rank (MR)</strong>.
+        </h4>
 
       <blockquote>
         <p>
-          <a href="http://atted.jp/" target="_blank">ATTED-II</a> is a comprehensive database resource of coexpressed gene sets in Arabidopsis
-          that provides coregulated gene relationships inferred from microarray data and cis elements.
+          <a href="http://atted.jp/" target="_blank">ATTED-II</a> is a comprehensive database resource of coexpressed gene sets
+          in Arabidopsis that provides coregulated gene relationships inferred from microarray data and cis elements.
           It includes lists and networks of coexpressed genes, and visual representation of expression patterns.
-          The database can be used for a wide variety of experimental designs,
+          The database can be used for a wide variety of experimental designs, 
           including targeting of genes for functional identification or for regulatory investigation.
         </p>
         <footer>The ATTED-II Coexpression Database</footer>
