--- a/app/app.html
+++ b/app/app.html
@@ -81,7 +81,7 @@
           <a href="http://atted.jp/" target="_blank">ATTED-II</a> is a comprehensive database resource of coexpressed gene sets
           in Arabidopsis that provides coregulated gene relationships inferred from microarray data and cis elements.
           It includes lists and networks of coexpressed genes, and visual representation of expression patterns.
-          The database can be used for a wide variety of experimental designs, 
+          The database can be used for a wide variety of experimental designs,
           including targeting of genes for functional identification or for regulatory investigation.
         </p>
         <footer>The ATTED-II Coexpression Database</footer>
@@ -140,7 +140,7 @@
                  You may choose between <strong>Pearson Correlation Coefficient</strong> or <strong>Mutual Rank</strong>.
               </li>
               <li>
-                The list of coexpressed genes can be filtered by the degree of coexpression. The cut-off score for the degree of coexpression is entered in the field labeled <strong>"Treshold" </strong>.
+                The list of coexpressed genes can be filtered by the degree of coexpression. The cut-off score for the degree of coexpression is entered in the field labeled <strong>"Threshold" </strong>.
               </li>
               <li>
                 In addition, the list of coexpressed genes can be searched by typing a keyword in the <strong>"Search"</strong> field right above the table of coexpressed genes.
