--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/DataTables/media/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="bower_components/datatables.net-bs/css/dataTables.bootstrap.css" />
   <!-- endbower-->
 
   <style type="text/css">
@@ -75,7 +75,8 @@
   <script src="/lib/test-runner.js"></script>
 
   <!-- bower:js -->
-  <script src="bower_components/DataTables/media/js/jquery.dataTables.js"></script>
+  <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
+  <script src="bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <!-- endbower -->
 
